- fixed the overflow issue of the body elements; - beautified the account information page; - moved the translate button inside the header; - removed css file for account information;

--- a/Albertslund/Albertslund/wwwroot/css/site.css
+++ b/Albertslund/Albertslund/wwwroot/css/site.css
@@ -1,4 +1,6 @@
-﻿body {
+﻿html, body {
+    width: 100%;
+    height: 100%;
     padding: 0;
     margin: 0;
     background-color: floralwhite;
